[gd_scene load_steps=4 format=3 uid="uid://5mxwo23o4sog"]

[ext_resource type="Script" uid="uid://dcixyqv51unst" path="res://_scripts/PrizeZone.gd" id="1_8b7ys"]
[ext_resource type="Texture2D" uid="uid://glvk2obkrbs5" path="res://artwork/droid_05.svg" id="2_isbqa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0odxb"]
size = Vector2(2920, 1310.01)

[node name="PrizeZone" type="Node2D"]
script = ExtResource("1_8b7ys")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(4256.24, 1354.33)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4256.24, -199.332)
scale = Vector2(0.999999, 1)
shape = SubResource("RectangleShape2D_0odxb")
debug_color = Color(0.0312212, 0.7, 0, 0.42)

[node name="YellowLight1" type="Sprite2D" parent="."]
position = Vector2(1410, -1310)
rotation = 1.64117
scale = Vector2(0.650219, -1)
skew = -0.00552034
texture = ExtResource("2_isbqa")
region_enabled = true
region_rect = Rect2(1019.4, 1124.88, 507.484, 483.318)

[node name="GreenLight1" type="Sprite2D" parent="."]
visible = false
position = Vector2(1410, -1310)
rotation = 1.6316
scale = Vector2(0.650202, -1)
texture = ExtResource("2_isbqa")
region_enabled = true
region_rect = Rect2(1019.4, 1662.88, 507.484, 483.318)

[node name="YellowLight2" type="Sprite2D" parent="."]
position = Vector2(-1400, -1320)
rotation = 1.50098
scale = Vector2(0.650219, 0.999989)
skew = -0.00552034
texture = ExtResource("2_isbqa")
region_enabled = true
region_rect = Rect2(1019.4, 1124.88, 507.484, 483.318)

[node name="GreenLight2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1401, -1319)
rotation = 1.50098
scale = Vector2(0.650202, 1)
texture = ExtResource("2_isbqa")
region_enabled = true
region_rect = Rect2(1019.4, 1662.88, 507.484, 483.318)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
